--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-react-app": "^6.0.0",
     "glob-all": "^3.2.1",
     "google-map-react": "^2.1.9",
+    "gsap": "^3.10.4",
     "jest-environment-jsdom-fourteen": "^1.0.1",
     "jest-watch-typeahead": "^0.6.1",
     "purgecss-webpack-plugin": "^4.1.3",
@@ -22,7 +23,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-bootstrap": "^1.5.1",
     "react-countup": "^4.3.3",
-    "react-dev-utils": "^11.0.4",
+    "react-dev-utils": "^12.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
@@ -32,14 +33,13 @@
     "react-parallax": "^3.2.1",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "react-scroll-up": "^1.3.7",
     "react-scrollspy": "^3.4.3",
     "react-slick": "^0.28.1",
     "react-tabs": "^3.2.0",
     "react-text-loop": "^2.3.0",
-    "react-visibility-sensor": "^5.1.1",
-    "sass": "^1.32.8"
+    "react-visibility-sensor": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
