--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://othman.itechnopro.com",
+  "homepage": "https://padilha.io",
   "basename": "/",
   "dependencies": {
     "@material-ui/core": "4.11.3",
@@ -12,7 +12,6 @@
     "emailjs-com": "2.6.4",
     "eslint-config-react-app": "^6.0.0",
     "glob-all": "^3.2.1",
-    "google-map-react": "^2.1.9",
     "gsap": "^3.10.4",
     "jest-environment-jsdom-fourteen": "^1.0.1",
     "jest-watch-typeahead": "^0.6.1",
@@ -42,7 +41,7 @@
     "react-visibility-sensor": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
