Special commit on branch main: hotfix on package.json, regarding build script

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "lucaspadilha-website",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://padilha.io",
