--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "react-image-lightbox": "^5.1.1",
     "react-modal-video": "^1.2.6",
     "react-parallax": "^3.2.1",
-    "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-scroll-up": "^1.3.7",
@@ -106,7 +105,7 @@
       "jest-watch-typeahead/testname"
     ]
   },
-  "babel": {
+  "@babel/eslint-parser": {
     "presets": [
       "react-app"
     ]
@@ -114,6 +113,7 @@
   "keywords": [],
   "description": "",
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.1.3"
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@babel/eslint-parser": "^7.5.4"
   }
 }
