--- a/package.json
+++ b/package.json
@@ -7,14 +7,10 @@
   "dependencies": {
     "@material-ui/core": "4.11.3",
     "@material-ui/lab": "4.0.0-alpha.57",
-    "babel-preset-react-app": "^10.0.0",
     "bootstrap": "^4.6.0",
     "emailjs-com": "2.6.4",
-    "eslint-config-react-app": "^6.0.0",
     "glob-all": "^3.2.1",
     "gsap": "^3.10.4",
-    "jest-environment-jsdom-fourteen": "^1.0.1",
-    "jest-watch-typeahead": "^0.6.1",
     "purgecss-webpack-plugin": "^4.1.3",
     "react": "^17.0.1",
     "react-accessible-accordion": "^3.3.4",
@@ -40,7 +36,7 @@
     "react-visibility-sensor": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -61,59 +57,9 @@
       "last 1 safari version"
     ]
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jest-environment-jsdom-fourteen",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ]
-  },
-  "@babel/eslint-parser": {
-    "presets": [
-      "react-app"
-    ]
-  },
   "keywords": [],
   "description": "",
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.1.3",
-    "@babel/eslint-parser": "^7.5.4"
+    "@fullhuman/postcss-purgecss": "^4.1.3"
   }
 }
